# behaviorci

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yaml
behaviorci/: cli.py
behaviorci/agent/: __init__.py  evaluator.py  loader.py  models.py  runner.py
behaviorci/baseline/: __init__.py  storage.py
behaviorci/diff/: __init__.py  comparator.py  models.py
behaviorci/integrations/: github.py
behaviorci/reporters/: diff.py
docs/: agentic-platform-vision.md  architecture.md  ci-integration.md  cli.md  faq.md  quickstart.md  roadmap.md
examples/hello-world/: bundle.yaml
promptguard/: __init__.py  cli.py  exceptions.py
promptguard/agent/: __init__.py  evaluator.py  loader.py  runner.py
promptguard/baseline/: __init__.py  models.py  storage.py
promptguard/bundle/: __init__.py  dataset.py  loader.py
promptguard/diff/: __init__.py  comparator.py
promptguard/integrations/: github.py
promptguard/providers/: __init__.py  anthropic.py  mock.py  openai.py  registry.py
promptguard/reporters/: __init__.py  base.py  console.py  diff.py  json_reporter.py  markdown.py  registry.py
promptguard/runner/: __init__.py  engine.py  evaluator.py  thresholds.py
tests/: conftest.py
tests/bundle/: test_dataset.py  test_loader.py
tests/providers/: test_mock.py
tests/runner/: test_engine.py
